Added another timer

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel='stylesheet' href='lib/jquery-ui/jquery-ui.min.css' />
     <script type="text/javascript" src='lib/jquery-ui/jquery-ui.min.js'></script>
 
-    <link rel="stylesheet" href="index.css"/>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="controller.js"></script>
+    <link rel="stylesheet" href="static/css/index.css"/>
+    <script type="text/javascript" src="static/js/app.js"></script>
+    <script type="text/javascript" src="static/js/controller.js"></script>
 </head>
 <body style="text-align:center;">
-    <h1 style="text-align:center;"><p id="timer"></p></h1>
-    <h4 style="text-align:center;" id="relaxmsg">Dastan, please relax your eyes just for 30 seconds</h4>
+    <h1 style="text-align:center;color:#55ACEE;"><p id="timer"></p></h1>
+    <h4 style="text-align:center;color:#55ACEE;" id="relaxmsg">Dastan, please relax your eyes just for 30 seconds</h4>
 </body>
 </html>
